[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -130.0
margin_right = 100.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePanel" type="PanelContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 56.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/NamePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="VBoxContainer/NamePanel/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Player Name:"

[node name="PlayerName" type="LineEdit" parent="VBoxContainer/NamePanel/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 42.0
text = "Player"

[node name="HostPanel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HostPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="VBoxContainer/HostPanel/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Create Server"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HostPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 60.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 58.0
margin_bottom = 14.0
text = "Port"

[node name="ServerPort" type="LineEdit" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
text = "5555"
max_length = 5

[node name="Control" type="Control" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 62.0
margin_bottom = 42.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 186.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 120.0
margin_bottom = 14.0
text = "Max Players:"

[node name="MaxPlayers" type="SpinBox" parent="VBoxContainer/HostPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 42.0
min_value = 2.0
value = 2.0

[node name="CreateServerButton" type="Button" parent="VBoxContainer/HostPanel/VBoxContainer"]
margin_top = 64.0
margin_right = 186.0
margin_bottom = 84.0
text = "Create Server"

[node name="JoinPanel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 200.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/JoinPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="VBoxContainer/JoinPanel/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Join Server"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/JoinPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 60.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "IP"

[node name="IpAddress" type="LineEdit" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 42.0
text = "127.0.0.1"

[node name="Control" type="Control" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 124.0
margin_bottom = 42.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 186.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 58.0
margin_bottom = 14.0
text = "Port"

[node name="JoinPort" type="LineEdit" parent="VBoxContainer/JoinPanel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
text = "5555"

[node name="JoinServerButton" type="Button" parent="VBoxContainer/JoinPanel/VBoxContainer"]
margin_top = 64.0
margin_right = 186.0
margin_bottom = 84.0
text = "Join Server"
[connection signal="pressed" from="VBoxContainer/HostPanel/VBoxContainer/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinPanel/VBoxContainer/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
